feat: add a new post and fix css issue

--- a/src/components/InsightCard.astro
+++ b/src/components/InsightCard.astro
@@ -19,7 +19,7 @@ const hrFlag =
   insight?.data.referencedUrls != undefined;
 ---
 
-<article class="bg-secondary container px-4 mb-4 prose mx-auto w-full">
+<article class="bg-secondary container px-4 mb-4 prose mx-auto w-full pb-1">
   <header class="mb-4 lg:mb-6">
     <h1 class="mb-0 pb-0 mt-1 pt-4">
       <a class="no-underline" href={createInsightUrl(insight)}
