--- a/src/components/ReferencedUrls.astro
+++ b/src/components/ReferencedUrls.astro
@@ -16,7 +16,7 @@ const descriptionText =
 
 {
   renderFlag && (
-    <div class=" mx-auto">
+    <div class="mx-auto pb-1">
       <h4 class="font-normal">{descriptionText}:</h4>
       <ul>
         {entry.data.referencedUrls?.map((element) => {
