feat: add view transitions

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,7 @@ import LanguagePicker from "./LanguagePicker.astro";
 ---
 
 <footer
+  transition:persist
   class="footer p-4 bg-primary text-primary-content justify-items-end container mx-auto"
 >
   <div class="px-5">
