--- a/src/pages/en/about-me.astro
+++ b/src/pages/en/about-me.astro
@@ -4,10 +4,12 @@ const pageTitle = "About me";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <article>
-    <div class="py-5 pl-2">
-      Hi. Usually my writing creativity strikes in times that don't overlap with
-      coding time, so suppose that you are reading a lorem ipsum text.
-    </div>
-  </article>
+  <main transition:animate="slide" class="-z-10">
+    <article>
+      <div class="py-5 pl-2">
+        Hi. Usually my writing creativity strikes in times that don't overlap
+        with coding time, so suppose that you are reading a lorem ipsum text.
+      </div>
+    </article>
+  </main>
 </BaseLayout>
