--- a/src/pages/en/projects.astro
+++ b/src/pages/en/projects.astro
@@ -4,7 +4,9 @@ const pageTitle = "Projects";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <article>
-    <div class="py-5 pl-2">Soon!</div>
-  </article>
+  <main transition:animate="slide">
+    <article>
+      <div class="py-5 pl-2">Soon!</div>
+    </article>
+  </main>
 </BaseLayout>
