--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,11 +4,12 @@ import { getLangFromUrl } from "../i18n/utils";
 import Navigation from "@components/Navigation.astro";
 import Footer from "@components/Footer.astro";
 import Umami from "@components/Umami.astro";
+import { ViewTransitions } from "astro:transitions";
 const { pageTitle } = Astro.props;
 const lang = getLangFromUrl(Astro.url);
 ---
 
-<html lang={lang} data-theme="inba">
+<html lang={lang} data-theme="inba" transition:animate="none">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -20,6 +21,7 @@ const lang = getLangFromUrl(Astro.url);
       name="google-site-verification"
       content="eCj5eDvSvCQbudfe1BSUFP9TO89cePOHtUOMJ2l408k"
     />
+    <ViewTransitions />
     <title>{pageTitle}</title>
   </head>
   <body>
