--- a/src/pages/[lang]/insight/tags/[tag].astro
+++ b/src/pages/[lang]/insight/tags/[tag].astro
@@ -19,12 +19,14 @@ const lang = getLangFromUrl(Astro.url);
 ---
 
 <BaseLayout>
-  <div class="grid justify-center">
-    <div class="mx-auto w-full container">
-      <h2 class="text-lg">
-        Insights tagged with <span class="font-mono">#{tag}</span>:
-      </h2>
+  <main transition:animate="slide">
+    <div class="grid justify-center">
+      <div class="mx-auto w-full container">
+        <h2 class="text-lg">
+          Insights tagged with <span class="font-mono">#{tag}</span>:
+        </h2>
+      </div>
+      {posts?.map((post) => <InsightCard insight={post} lang={lang} />)}
     </div>
-    {posts?.map((post) => <InsightCard insight={post} lang={lang} />)}
-  </div>
+  </main>
 </BaseLayout>
