--- a/src/pages/[lang]/personal/tags/[tag].astro
+++ b/src/pages/[lang]/personal/tags/[tag].astro
@@ -18,12 +18,14 @@ const { posts } = Astro.props;
 ---
 
 <BaseLayout>
-  <div class="grid justify-center">
-    <div class="mx-auto w-full container">
-      <h2 class="text-lg">
-        Insights tagged with <span class="font-mono">#{tag}</span>:
-      </h2>
+  <main transition:animate="slide">
+    <div class="grid justify-center">
+      <div class="mx-auto w-full container">
+        <h2 class="text-lg">
+          Insights tagged with <span class="font-mono">#{tag}</span>:
+        </h2>
+      </div>
+      {posts?.map((post) => <PersonalCard personalEntry={post} />)}
     </div>
-    {posts?.map((post) => <PersonalCard personalEntry={post} />)}
-  </div>
+  </main>
 </BaseLayout>
