refactor: refactor and use consistent panel across the site
Uses a shared component to provide shared feedback.

closes #59

--- a/src/components/InsightCard.astro
+++ b/src/components/InsightCard.astro
@@ -1,5 +1,6 @@
 ---
 import TagList from "./TagList.astro";
+import Panel from "./Panel.astro";
 import RelatedInsight from "./RelatedInsight.astro";
 import type { CollectionEntry } from "astro:content";
 import ReferencedUrls from "./ReferencedUrls.astro";
@@ -19,7 +20,7 @@ const hrFlag =
   insight?.data.referencedUrls != undefined;
 ---
 
-<article class="bg-secondary container px-4 mb-4 prose mx-auto w-full pb-1">
+<Panel>
   <header class="mb-4 lg:mb-6">
     <h1 class="mb-0 pb-0 mt-1 pt-4">
       <a class="no-underline" href={createInsightUrl(insight)}
@@ -39,4 +40,4 @@ const hrFlag =
   {hrFlag && <hr />}
   <RelatedInsight insight={insight} />
   <ReferencedUrls entry={insight} />
-</article>
+</Panel>
