--- a/src/pages/en/projects.astro
+++ b/src/pages/en/projects.astro
@@ -1,12 +1,13 @@
 ---
+import Panel from "@components/Panel.astro";
 import BaseLayout from "@layouts/BaseLayout.astro";
 const pageTitle = "Projects";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <main transition:animate="slide">
-    <article>
+    <Panel>
       <div class="py-5 pl-2">Soon!</div>
-    </article>
+    </Panel>
   </main>
 </BaseLayout>
