--- a/src/pages/pl/projects.astro
+++ b/src/pages/pl/projects.astro
@@ -1,10 +1,11 @@
 ---
+import Panel from "@components/Panel.astro";
 import BaseLayout from "@layouts/BaseLayout.astro";
 const pageTitle = "Projekty";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <article>
+  <Panel>
     <div class="py-5 pl-2">Soon!</div>
-  </article>
+  </Panel>
 </BaseLayout>
