--- a/src/pages/pl/about-me.astro
+++ b/src/pages/pl/about-me.astro
@@ -1,13 +1,12 @@
 ---
+import Panel from "@components/Panel.astro";
 import BaseLayout from "@layouts/BaseLayout.astro";
 const pageTitle = "About me";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <article>
-    <div class="py-5 pl-2">
-      Hi. Usually my writing creativity strikes in times that don't overlap with
-      coding time, so suppose that you are reading a lorem ipsum text.
-    </div>
-  </article>
+  <Panel>
+    Hi. Usually my writing creativity strikes in times that don't overlap with
+    coding time, so suppose that you are reading a lorem ipsum text.
+  </Panel>
 </BaseLayout>
