migrate to bun on cicd side, update lang type in project, add eslint svelte plugin

--- a/src/pages/[lang]/projects.astro
+++ b/src/pages/[lang]/projects.astro
@@ -10,6 +10,9 @@ export async function getStaticPaths() {
   return languageKeys.map((lang) => ({ params: { lang: lang } }));
 }
 
+interface Props {
+  lang: string;
+}
 const { lang } = Astro.params;
 ---
 
